update description and add gitignore

--- a/MachineLearning_NeuralNetworks_Intro.ipynb
+++ b/MachineLearning_NeuralNetworks_Intro.ipynb
@@ -4,33 +4,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ICESat-2 Hackweek 2020: Machine Learning"
+    "# Intro to Machine Learning and Neural Networks Tutorial"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Yara Mohajerani ([ymohajer@uci.edu](mailto:ymohajer@uci.edu))"
+    "#### Yara Mohajerani ([ymohajer@uci.edu](mailto:ymohajer@uci.edu))\n",
+    "\n",
+    "*Portion of material developed by Yara Mohajerani for [UW ICESat-2 Hackweek 2020](https://github.com/ICESAT-2HackWeek).*"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Note** Before going through this tutorial, make sure you have the correction environment by running\n",
-    "\n",
-    "`conda create --name <env> --file mlenv.lock`\n",
-    "with the `mlenv.lock` file being in this repositoriy, and choose the this environment for your kernel.\n",
-    "\n",
-    "---\n",
-    "\n",
-    "In this tutorial we will explore the basics of machine learning with an emphasize on neural networks and applications in altimetry. First we will offer a brief introduction to theory and techniques in implementing neural networks, and then will focus on altimetry applications.\n",
-    "\n",
     "## Motivation\n",
-    "Advances in machine learning have made it a valuable tool for extracting insights from large datasets without the need for developing exact analytical algorithms. In particular, this has proven extremely useful for altimetry applications. For example, imagine you have thousands of satellite images and you want to identify paricular features automatically in the dataset. One way is to manually go through the data, which is not practical. The second way is to come up with an analytical algorithm that uses explicit engineered laws to detect the desired features. This is not very easy or robust, to say the least. But machine learning methods can learn to perform the desired task from the data in an approximate manner. Specifically, *supervised* methods use the data along with the desired outputs to accomplish the learning task. Here we will focus on supervised machine learning. An extremely useful subset of supervised machine learning fields is *neural networks*, which will be discussed in this notebook.\n",
+    "Advances in machine learning have made it a valuable tool for extracting insights from large datasets without the need for developing exact analytical algorithms. In particular, this has proven extremely useful for remote sensing applications. For example, imagine you have thousands of satellite images and you want to identify particular features automatically in the dataset. One way is to manually go through the data, which is not practical. The second way is to come up with an analytical algorithm that uses explicit engineered laws to detect the desired features. This is not very easy or robust, to say the least. But machine learning methods can learn to perform the desired task from the data in an approximate manner. Specifically, *supervised* methods use the data along with the desired outputs to accomplish the learning task. Here we will focus on supervised machine learning. An extremely useful subset of supervised machine learning fields is *neural networks*, which will be discussed in this notebook.\n",
     "\n",
-    "Given the shear volume of altimetry data from ICESat-2, the is huge potential in extracting insights from the data with machine learning that were not possible before. Keep in mind that machine learning is a big field and here we focus on only a few specific approaches and a few computational tools. Specifically, we will focus on neural networks largely implemented in `keras`.\n",
+    "Given the shear volume of remote sensing data generated nowadays, the is huge potential in extracting insights from the data with machine learning that were not possible before. Keep in mind that machine learning is a big field and here we focus on only a few specific approaches and a few computational tools. Specifically, we will focus on neural networks largely implemented in `keras`.\n",
     "\n",
     "---\n",
     "Introduction to neural networks\n",
@@ -78,7 +71,12 @@
     "\n",
     "\n",
     "![Neural network generic example fromw ww.astroml.org](https://www.astroml.org/_images/fig_neural_network_1.png)\n",
-    "<sub>Schematic from [AstroML](www.astroml.org)</sub>"
+    "<sub>Schematic from [AstroML](https://www.astroml.org/book_figures/chapter9/fig_neural_network.html#book-fig-chapter9-fig-neural-network)\n",
+    "    \n",
+    "    Figure produced by code under BSD license authored by Jake VanderPlas & Brigitta Sipocz.\n",
+    "    The figure produced by this code is published in the textbook \"Statistics, Data Mining, and Machine Learning in Astronomy\" (2019)\n",
+    "    For more information, see http://astroML.github.com\n",
+    "</sub>"
    ]
   },
   {
@@ -334,7 +332,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "# Regression Exercise with Neural Networks with ATL03-like data\n",
+    "# Regression Exercise with Neural Networks and ICESat-2 ATL03-like data\n",
     "---\n",
     "Before breaking into groups, we will do the set up of the problem together.\n",
     "\n",
@@ -634,13 +632,7 @@
       "904/904 [==============================] - 0s 52us/step - loss: 0.2518 - mean_absolute_error: 0.2518 - accuracy: 0.9690\n",
       "Epoch 61/100\n",
       "904/904 [==============================] - 0s 52us/step - loss: 0.2417 - mean_absolute_error: 0.2417 - accuracy: 0.9436\n",
-      "Epoch 62/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 62/100\n",
       "904/904 [==============================] - 0s 54us/step - loss: 0.2381 - mean_absolute_error: 0.2381 - accuracy: 0.9524\n",
       "Epoch 63/100\n",
       "904/904 [==============================] - 0s 61us/step - loss: 0.2207 - mean_absolute_error: 0.2207 - accuracy: 0.9602\n",
